[gd_scene load_steps=26 format=3 uid="uid://ctlnpeebeoqgd"]

[ext_resource type="Texture2D" uid="uid://c3p85tdu00duw" path="res://placeholderArt/icon.svg" id="1_2jrf3"]
[ext_resource type="Script" uid="uid://cdbuic4bcd67n" path="res://inGame/npc/npc.gd" id="1_3atjd"]
[ext_resource type="Texture2D" uid="uid://skl6oj4btwmf" path="res://placeholderArt/myPixelArt/HPBar (1)/hp2.png" id="3_bj2b7"]
[ext_resource type="Texture2D" uid="uid://c8n0k3x2k67si" path="res://placeholderArt/myPixelArt/NewSprun-1.png.png" id="3_hhgrb"]
[ext_resource type="Texture2D" uid="uid://cfkr8gbn4j4sj" path="res://placeholderArt/myPixelArt/HPBar (1)/hp0.png" id="4_hhgrb"]
[ext_resource type="Texture2D" uid="uid://bvhkmrse4oqmm" path="res://placeholderArt/myPixelArt/ShieldBadArt-1.png.png" id="4_wk2dw"]
[ext_resource type="PackedScene" uid="uid://c3e3n4jvt2s4t" path="res://inGame/sound/random_pitch.tscn" id="5_dvc8s"]
[ext_resource type="Texture2D" uid="uid://pdjsmweiu7br" path="res://placeholderArt/myPixelArt/HPBar (1)/hp1.png" id="5_fq4yk"]
[ext_resource type="AudioStream" uid="uid://bgm5xr0twjahx" path="res://placeholderArt/sfx/attack.wav" id="5_np5c4"]
[ext_resource type="AudioStream" uid="uid://qwvtdoovi5il" path="res://placeholderArt/sfx/shieldMaybeCloth.wav" id="6_dvc8s"]
[ext_resource type="AudioStream" uid="uid://cvxoanu0qn6i8" path="res://placeholderArt/sfx/shieldBetter.wav" id="7_7swic"]
[ext_resource type="AudioStream" uid="uid://c6a7y511mjrn3" path="res://placeholderArt/sfx/death.wav" id="8_yjg3n"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_hhgrb"]

[sub_resource type="Gradient" id="Gradient_fq4yk"]
offsets = PackedFloat32Array(0, 0.19444445, 0.8611111, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3c5kl"]
gradient = SubResource("Gradient_fq4yk")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_dkh77"]
particle_flag_align_y = true
particle_flag_disable_z = true
angle_min = 1.0728835e-05
angle_max = 360.00003
spread = 180.0
initial_velocity_min = 250.0
initial_velocity_max = 540.7
gravity = Vector3(0, 980, 0)
color_ramp = SubResource("GradientTexture1D_3c5kl")

[sub_resource type="LabelSettings" id="LabelSettings_ak11v"]

[sub_resource type="Animation" id="Animation_v55o0"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/Icon:size_flags_stretch_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.76, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/LowerBar/Shield:size_flags_stretch_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.05, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer/LowerBar/HSeparator:size_flags_stretch_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.08, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer/Intent:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VBoxContainer/Icon:self_modulate:g")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("VBoxContainer/Icon:self_modulate:b")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:modulate:g")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:modulate:b")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath(".:modulate:a")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath(".:size_flags_stretch_ratio")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/10/type = "bezier"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("VBoxContainer/LowerBar/HP:size_flags_stretch_ratio")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("VBoxContainer/Icon/Control/BuffParticle:emitting")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1pxb3"]
resource_name = "attack"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/Icon:size_flags_stretch_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0.76, -0.25, 0, 0.25, 0, 1.4, -0.06666667, -0.18500002, 0, 0, 0.76, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4, 0.8666667)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/Intent:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.16666667, 0.16666667, 0, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="Animation" id="Animation_7qu08"]
resource_name = "buff"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/Icon:size_flags_stretch_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 2, 2),
"points": PackedFloat32Array(0.76, -0.25, 0, 0.25, 0, 1.7, -0.05166667, -0.15666668, 0, 0, 0.76, -0.06333333, 0.15666667, 0, 0),
"times": PackedFloat32Array(0, 0.31, 0.69)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/Icon/Control/BuffParticle:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.31),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_eymni"]
resource_name = "defend"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/LowerBar/Shield:size_flags_stretch_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 2, 0),
"points": PackedFloat32Array(0.05, -0.25, 0, 0.25, 0, 0.09, -0.06666667, -0.0033333334, 0, 0, 0.05, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/LowerBar/HSeparator:size_flags_stretch_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 2, 0),
"points": PackedFloat32Array(0.08, -0.25, 0, 0.25, 0, 0.07, -0.06666667, 0.005, 0, 0, 0.08, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4, 1)
}

[sub_resource type="Animation" id="Animation_wk2dw"]
resource_name = "die"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate:g")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.16666667, 0.16666667, 0, 0),
"times": PackedFloat32Array(0, 0.9)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate:b")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.16666667, 0.16666667, 0, 0),
"times": PackedFloat32Array(0, 0.9)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.16666667, 0.16666667, 0, 0),
"times": PackedFloat32Array(0, 0.9)
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.93333334),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_np5c4"]
resource_name = "pop_in"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:size_flags_stretch_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/LowerBar/HP:size_flags_stretch_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer/Icon:size_flags_stretch_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(2, 0),
"points": PackedFloat32Array(0, 0, 0, 0.16666667, 0.12666667, 0.76, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="Animation" id="Animation_a1cnd"]
resource_name = "take_hit"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/Icon:self_modulate:g")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 2, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.06666667, 0.16666667, 0, 0, 1, -0.10000001, -0.16666667, 0, 0),
"times": PackedFloat32Array(0, 0.4, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/Icon:self_modulate:b")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 2, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.06666667, 0.16666667, 0, 0, 1, -0.10000001, -0.16666667, 0, 0),
"times": PackedFloat32Array(0, 0.4, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eymni"]
_data = {
&"RESET": SubResource("Animation_v55o0"),
&"attack": SubResource("Animation_1pxb3"),
&"buff": SubResource("Animation_7qu08"),
&"defend": SubResource("Animation_eymni"),
&"die": SubResource("Animation_wk2dw"),
&"pop_in": SubResource("Animation_np5c4"),
&"take_hit": SubResource("Animation_a1cnd")
}

[node name="NPC" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_3atjd")
icon = ExtResource("1_2jrf3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.34

[node name="Icon" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.76
texture = SubResource("PlaceholderTexture2D_hhgrb")
expand_mode = 3
stretch_mode = 5

[node name="Control" type="Control" parent="VBoxContainer/Icon"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="BuffParticle" type="GPUParticles2D" parent="VBoxContainer/Icon/Control"]
emitting = false
texture = ExtResource("3_hhgrb")
lifetime = 3.0
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_dkh77")

[node name="VSeparator" type="VSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.06

[node name="DeBuffs" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
alignment = 1

[node name="VSeparator456" type="VSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.06

[node name="LowerBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer/LowerBar"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.08

[node name="HP" type="TextureProgressBar" parent="VBoxContainer/LowerBar"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 40.0
value = 40.0
rounded = true
nine_patch_stretch = true
texture_under = ExtResource("3_bj2b7")
texture_over = ExtResource("4_hhgrb")
texture_progress = ExtResource("5_fq4yk")

[node name="HPBar" type="HBoxContainer" parent="VBoxContainer/LowerBar/HP"]
layout_direction = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="CurrentHP" type="Label" parent="VBoxContainer/LowerBar/HP/HPBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "40"
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="slash" type="Label" parent="VBoxContainer/LowerBar/HP/HPBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.02
text = "/"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="MaxHP" type="Label" parent="VBoxContainer/LowerBar/HP/HPBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "40"
vertical_alignment = 1
clip_text = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/LowerBar"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.08

[node name="Shield" type="TextureRect" parent="VBoxContainer/LowerBar"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05
texture = ExtResource("4_wk2dw")
expand_mode = 5
stretch_mode = 5

[node name="ShieldNum" type="Label" parent="VBoxContainer/LowerBar/Shield"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = SubResource("LabelSettings_ak11v")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/LowerBar"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.04

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="Animate" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_eymni")
}
autoplay = "pop_in"

[node name="Attack" parent="." instance=ExtResource("5_dvc8s")]
stream = ExtResource("5_np5c4")

[node name="DefendAttack" parent="." instance=ExtResource("5_dvc8s")]
stream = ExtResource("6_dvc8s")

[node name="Death" parent="." instance=ExtResource("5_dvc8s")]
stream = ExtResource("8_yjg3n")

[node name="DoDefend" parent="." instance=ExtResource("5_dvc8s")]
stream = ExtResource("7_7swic")
volume_db = -4.643
